apps/scolx-demo/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scolx-backend
  namespace: scolx-demo
  labels:
    app: scolx-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scolx-backend
  template:
    metadata:
      labels:
        app: scolx-backend
    spec:
      imagePullSecrets:
        - name: scolx-registry
      containers:
        - name: scolx-backend
          image: registry.cherkaoui.ch/scolx/scolx/backend:latest
          ports:
            - containerPort: 8080
              name: web
          livenessProbe:
            httpGet:
              path: /api/v1/livez
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v1/readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /api/v1/startupz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 30
