apps/scolx-demo/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: scolx-backend
  namespace: scolx-demo
spec:
  selector:
    app: scolx-backend
  type: ClusterIP
  ports:
    - name: web
      port: 8080
      targetPort: 8080
      protocol: TCP
