apps/scolx-demo/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: scolx-frontend
  namespace: scolx-demo
spec:
  selector:
    app: scolx-frontend
  type: ClusterIP
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      protocol: TCP
